--- a/src/modules/shared/components/Dropdown/Dropdown.scss
+++ b/src/modules/shared/components/Dropdown/Dropdown.scss
@@ -108,10 +108,11 @@
   &__content {
     padding: 8px 0;
     position: absolute;
+    display: none;
     width: 100%;
     margin-top: 8px;
     left: 0;
-    
+    z-index: -1;
     opacity: 0;
 
     transition-duration: $transition-duration;
@@ -119,6 +120,7 @@
     background-color: $black;
 
     &--active {
+      display: block;
       opacity: 1;
       z-index: 1;
     }
